Updating make files, adding VS2008 I finally have Windows now, hurray! I will be working on this exclusively for Windows/Linux I cannot get it to compile in Mac at the moment.

--- a/support/codeblocks/EVE.cbp
+++ b/support/codeblocks/EVE.cbp
@@ -34,6 +34,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="Debug|x64">
@@ -63,6 +64,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="Debug|x64">
@@ -92,6 +94,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="Release|x64">
@@ -122,6 +125,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="DebugDynamic|x64">
@@ -155,6 +159,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseDynamic|x64">
@@ -188,6 +193,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThread|x64">
@@ -221,6 +227,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThread|x64">
@@ -254,6 +261,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThreadDynamic|x64">
@@ -291,6 +299,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThreadDynamic|x64">
@@ -328,6 +337,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="Release|x32">
@@ -358,6 +368,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="Debug|x32">
@@ -387,6 +398,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="Debug|x32">
@@ -416,6 +428,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="Release|x32">
@@ -446,6 +459,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="DebugDynamic|x32">
@@ -479,6 +493,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseDynamic|x32">
@@ -512,6 +527,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThread|x32">
@@ -545,6 +561,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThread|x32">
@@ -578,6 +595,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThreadDynamic|x32">
@@ -615,6 +633,7 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThreadDynamic|x32">
@@ -652,12 +671,10 @@
 					<Add library="pthread" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
+					<Add library="X11" />
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="../../source/EventHandler.cpp">
-			<Option virtualFolder="." />
-		</Unit>
 		<Unit filename="../../source/PlanetManager.cpp">
 			<Option virtualFolder="." />
 		</Unit>
@@ -671,9 +688,6 @@
 			<Option virtualFolder="." />
 		</Unit>
 		<Unit filename="../../include/PlanetManager.hpp">
-			<Option virtualFolder="include" />
-		</Unit>
-		<Unit filename="../../include/EventHandler.hpp">
 			<Option virtualFolder="include" />
 		</Unit>
 		<Unit filename="../../include/SimApp.hpp">
