--- a/support/codeblocks/Irrlicht.cbp
+++ b/support/codeblocks/Irrlicht.cbp
@@ -15,6 +15,8 @@
 					<Add option="-O2" />
 					<Add option="-m64" />
 					<Add option="-DNDEBUG" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -33,6 +35,8 @@
 					<Add option="-g" />
 					<Add option="-m64" />
 					<Add option="-DDEBUG" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -50,6 +54,8 @@
 					<Add option="-g" />
 					<Add option="-m64" />
 					<Add option="-DDEBUG" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -67,6 +73,8 @@
 					<Add option="-O2" />
 					<Add option="-m64" />
 					<Add option="-DNDEBUG" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -83,6 +91,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m64" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -99,6 +109,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m64" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -115,6 +127,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m64" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -131,6 +145,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m64" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -147,6 +163,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m64" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -163,6 +181,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m64" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -181,6 +201,8 @@
 					<Add option="-O2" />
 					<Add option="-m32" />
 					<Add option="-DNDEBUG" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -199,6 +221,8 @@
 					<Add option="-g" />
 					<Add option="-m32" />
 					<Add option="-DDEBUG" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -216,6 +240,8 @@
 					<Add option="-g" />
 					<Add option="-m32" />
 					<Add option="-DDEBUG" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -233,6 +259,8 @@
 					<Add option="-O2" />
 					<Add option="-m32" />
 					<Add option="-DNDEBUG" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -249,6 +277,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m32" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -265,6 +295,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m32" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -281,6 +313,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m32" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -297,6 +331,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m32" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -313,6 +349,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m32" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -329,6 +367,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-m32" />
+					<Add directory="../../external/irrlicht/source/Irrlicht/MacOSX" />
+					<Add directory="../../external/irrlicht/source/Irrlicht" />
 					<Add directory="../../external/irrlicht/include" />
 					<Add directory="../../external/glfw/deps" />
 				</Compiler>
@@ -1640,6 +1680,15 @@
 		</Unit>
 		<Unit filename="../../external/irrlicht/source/Irrlicht/CGUIWindow.h">
 			<Option virtualFolder="external/irrlicht/source/Irrlicht" />
+		</Unit>
+		<Unit filename="../../external/irrlicht/source/Irrlicht/MacOSX/OSXClipboard.h">
+			<Option virtualFolder="external/irrlicht/source/Irrlicht/MacOSX" />
+		</Unit>
+		<Unit filename="../../external/irrlicht/source/Irrlicht/MacOSX/AppDelegate.h">
+			<Option virtualFolder="external/irrlicht/source/Irrlicht/MacOSX" />
+		</Unit>
+		<Unit filename="../../external/irrlicht/source/Irrlicht/MacOSX/CIrrDeviceMacOSX.h">
+			<Option virtualFolder="external/irrlicht/source/Irrlicht/MacOSX" />
 		</Unit>
 		<Unit filename="../../external/irrlicht/source/Irrlicht/zlib/uncompr.c">
 			<Option virtualFolder="external/irrlicht/source/Irrlicht/zlib" />
